// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevSiteRoutingMenu Snapshot tests renders a toolbar with 10 menuItems 1`] = `
<NavigationSideMenu
  data-routing-menu={true}
  menuItems={
    Array [
      Object {
        "hasSubMenu": true,
        "key": "/0",
        "metaData": Object {
          "externalLink": undefined,
          "hasSubMenu": true,
          "path": "/0",
        },
        "text": "0",
      },
      Object {
        "hasSubMenu": false,
        "key": "/1",
        "metaData": Object {
          "externalLink": undefined,
          "hasSubMenu": false,
          "path": "/1",
        },
        "text": "1",
      },
      Object {
        "hasSubMenu": true,
        "key": "/2",
        "metaData": Object {
          "externalLink": undefined,
          "hasSubMenu": true,
          "path": "/2",
        },
        "text": "2",
      },
      Object {
        "hasSubMenu": false,
        "key": "/3",
        "metaData": Object {
          "externalLink": undefined,
          "hasSubMenu": false,
          "path": "/3",
        },
        "text": "3",
      },
      Object {
        "hasSubMenu": true,
        "key": "/4",
        "metaData": Object {
          "externalLink": undefined,
          "hasSubMenu": true,
          "path": "/4",
        },
        "text": "4",
      },
      Object {
        "hasSubMenu": false,
        "key": "/5",
        "metaData": Object {
          "externalLink": undefined,
          "hasSubMenu": false,
          "path": "/5",
        },
        "text": "5",
      },
      Object {
        "hasSubMenu": true,
        "key": "/6",
        "metaData": Object {
          "externalLink": undefined,
          "hasSubMenu": true,
          "path": "/6",
        },
        "text": "6",
      },
      Object {
        "hasSubMenu": false,
        "key": "/7",
        "metaData": Object {
          "externalLink": undefined,
          "hasSubMenu": false,
          "path": "/7",
        },
        "text": "7",
      },
      Object {
        "hasSubMenu": true,
        "key": "/8",
        "metaData": Object {
          "externalLink": undefined,
          "hasSubMenu": true,
          "path": "/8",
        },
        "text": "8",
      },
      Object {
        "hasSubMenu": false,
        "key": "/9",
        "metaData": Object {
          "externalLink": undefined,
          "hasSubMenu": false,
          "path": "/9",
        },
        "text": "9",
      },
      Object {
        "childKeys": Array [
          "/0",
          "/1",
          "/2",
          "/3",
          "/4",
          "/5",
          "/6",
          "/7",
          "/8",
          "/9",
        ],
        "isRootMenu": false,
        "key": "devSiteRoutingMenuRootMenuKey",
        "text": "",
      },
    ]
  }
  onChange={[Function]}
  routingStackBack={[MockFunction]}
  selectedChildKey="/1"
  selectedMenuKey="devSiteRoutingMenuRootMenuKey"
  toolbar={
    <FormattedMessage
      id="Terra.devSiteRoutingMenu.filter"
      values={Object {}}
    >
      [Function]
    </FormattedMessage>
  }
/>
`;

exports[`DevSiteRoutingMenu Snapshot tests renders with given props 1`] = `
<NavigationSideMenu
  data-routing-menu={true}
  menuItems={
    Array [
      Object {
        "hasSubMenu": false,
        "key": "/1",
        "metaData": Object {
          "externalLink": undefined,
          "hasSubMenu": false,
          "path": "/1",
        },
        "text": "1",
      },
      Object {
        "hasSubMenu": true,
        "key": "/2",
        "metaData": Object {
          "externalLink": undefined,
          "hasSubMenu": true,
          "path": "/2",
        },
        "text": "2",
      },
      Object {
        "childKeys": Array [
          "/1",
          "/2",
        ],
        "isRootMenu": false,
        "key": "devSiteRoutingMenuRootMenuKey",
        "text": "",
      },
    ]
  }
  onChange={[Function]}
  routingStackBack={[MockFunction]}
  selectedChildKey="/1"
  selectedMenuKey="devSiteRoutingMenuRootMenuKey"
  toolbar={null}
/>
`;
